# pronto-distro

./: .gitignore  .gitmodules  .travis.yml  DEV_NOTES.txt  NOTES.txt  README.md  README.rst  tobuild.txt
ICPCUDA-app/: CMakeLists.txt  README
ICPCUDA-app/src/icpcuda-app/: CMakeLists.txt  icpcuda-app.cpp
config/: drc_robot.pmd  drc_robot_02_mit_no_laser.cfg  drc_robot_02_trooper.cfg  drc_robot_from_logfile.cfg  drc_robot_gpf.cfg  drc_robot_traclabs.cfg  hyq.cfg  hyq_gpf.pmd  kinect_imu.cfg  kinect_imu.pmd  thor_mang.cfg  thor_mang.pmd  traclabs.pmd  walkman_test.cfg  walkman_test.pmd
config/atlas/: robot.pmd  robot_from_logfile.cfg  robot_gpf.cfg  state_estimation.cfg
config/bigman/: core_config.cfg  robot.cfg  robot.pmd  state_estimation.cfg
config/config_components/: multisense_02.cfg  state_estimation_ihmc_sim.cfg  state_estimation_mit.cfg  state_estimation_mit_from_logfile.cfg  state_estimation_mit_gpf.cfg  state_estimation_no_laser.cfg  state_estimation_no_laser_traclabs.cfg  state_estimation_trooper.cfg
config/hyq/: robot.pmd
config/kinect_imu/: robot.pmd
config/signal_scope/: hyq_state.py  rates.cfg  walkman_test.py
config/thor_mang_components/: launch_designer.sh  robot_main.cfg
config/val/: robot.cfg  state_estimation.cfg
config_old/: ihmc.pmd
config_old/config_components/: robot_main.cfg  state_estimation_mit.cfg
docs/: aerial_sensors_example.cfg
kinect/: CMakeLists.txt
kinect/src/tools/: CMakeLists.txt  rgb_tool.cpp
models/: multisense_sl  robotiq_hand_description
models/bigman_urdf/: director_config.json  (+2 more)
optional/: tobuild.txt
(+34 files in other folders)
